--- a/finalreport.qmd
+++ b/finalreport.qmd
@@ -262,7 +262,7 @@ ggplot(data=house_sales,aes(x=year),group = 1 ) +
 In conclusion, the housing market in Turkey has been facing some challenges in recent years, including rising construction costs and the impact of exchange rates.
 Foreign house sales in Turkey have increased slightly, but still only account for a small portion (around 5%) of total sales.
 The construction cost index in Turkey has been increasing at a faster rate compared to the construction cost index in Europe, making construction in Turkey less profitable.
-The exchange rate between the Turkish lira and other currencies can also impact construction costs and foreign house sales, with a weak lira increasing costs and making properties less affordable for foreign buyers.
+The results of the analysis could show that there is a negative relationship between the exchange rate of the Turkish lira and the construction cost index in Turkey. This means that when the value of the Turkish lira declines, the construction cost in Turkey tends to go higher.The conclusion of the Regression analysis could be that the exchange rate of the Turkish lira has a significant impact on the construction cost in Turkey. This finding could be useful for policymakers and construction industry stakeholders to understand the economic factors that affect the construction industry in Turkey and to develop strategies to mitigate the impact of exchange rate fluctuations on construction costs.
 
 It is important to continue monitoring these and other factors in order to better understand the current state of the housing market in Turkey and make more informed predictions about its future growth.
 The level of foreign demand for houses in Turkey should also be monitored in order to ensure a balanced mix of domestic and foreign demand and maintain the long-term stability of the market.
